upgrade CDTS, update layout text, added postcss

--- a/code/language/layout-fr.po
+++ b/code/language/layout-fr.po
@@ -159,3 +159,15 @@ msgstr ""
 msgid "Submit"
 msgstr "Soumettre"
 
+#: 
+msgid "Next"
+msgstr "Suivante"
+
+#: 
+msgid "Previous"
+msgstr "Précédente"
+
+#: 
+msgid "Start"
+msgstr "Débuté"
+
